--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>testing react</title>
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" media="screen and (min-width:1200px)" href="style/over1199.css">
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container-fluid">
+    <div class="container-react"></div>
+  </div>
 </body>
 <script src="bundle.js"></script>
 </html>
