Added review form component
including accessibility features

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>testing react</title>
-  <link rel="stylesheet" href="style/style.css">
-  <link rel="stylesheet" media="screen and (min-width:1200px)" href="style/over1199.css">
+  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" media="screen and (min-width:1200px)" href="/style/over1199.css">
   <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -18,5 +18,5 @@
     <div class="container-react"></div>
   </div>
 </body>
-<script src="bundle.js"></script>
+<script src="/bundle.js"></script>
 </html>
