Added review all component
Also added media query for responsive font-sizes.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>testing react</title>
   <link rel="stylesheet" href="/style/style.css">
   <link rel="stylesheet" media="screen and (min-width:1200px)" href="/style/over1199.css">
+  <link rel="stylesheet" media="screen and (min-width:768px)" href="/style/over767.css">
   <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
