--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/style/style.css">
-  <link rel="stylesheet" media="screen and (min-width:1200px)" href="/style/over1199.css">
-  <link rel="stylesheet" media="screen and (min-width:768px)" href="/style/over767.css">
   <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
+  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" media="screen and (min-width:1200px)" href="/style/over1199.css">
+  <link rel="stylesheet" media="screen and (min-width:768px)" href="/style/over767.css">
+  <link rel="stylesheet" media="screen and (max-width:575px)" href="/style/under576.css">
 </head>
 <body>
   <div class="container-fluid">
