--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
+  <link rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"
+    integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="/style/style.css">
   <link rel="stylesheet" media="screen and (min-width:1200px)" href="/style/over1199.css">
   <link rel="stylesheet" media="screen and (min-width:768px)" href="/style/over767.css">
