Switched to a create-react-app setup to facilitate deploy

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>testing react</title>
+  <title>tiny book reviewer</title>
   <link rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"
     integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
@@ -13,6 +13,7 @@
   <link rel="stylesheet" media="screen and (min-width:1200px)" href="./style/over1199.css">
   <link rel="stylesheet" media="screen and (min-width:768px)" href="./style/over767.css">
   <link rel="stylesheet" media="screen and (max-width:575px)" href="./style/under576.css">
+  <link rel="manifest" href="./manifest.json">
 </head>
 <body>
   <div class="container-fluid">
