Added %PUBLIC_URL% to css file path

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"
     integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="./style/style.css">
-  <link rel="stylesheet" media="screen and (min-width:1200px)" href="./style/over1199.css">
-  <link rel="stylesheet" media="screen and (min-width:768px)" href="./style/over767.css">
-  <link rel="stylesheet" media="screen and (max-width:575px)" href="./style/under576.css">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="stylesheet" href="%PUBLIC_URL%/style/style.css">
+  <link rel="stylesheet" media="screen and (min-width:1200px)" href="%PUBLIC_URL%/style/over1199.css">
+  <link rel="stylesheet" media="screen and (min-width:768px)" href="%PUBLIC_URL%/style/over767.css">
+  <link rel="stylesheet" media="screen and (max-width:575px)" href="%PUBLIC_URL%/style/under576.css">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 </head>
 <body>
   <div class="container-fluid">
